fix text too small on phone and tablet

--- a/mystyle.css
+++ b/mystyle.css
@@ -30,7 +30,7 @@ body{
 
 h1 {
     color: #291200;
-    font-size: 30pt;
+    font-size: 30px;
     font-weight: bold;
     margin: 0px;
 }
@@ -46,7 +46,7 @@ h3 {
 
 .d2{
     font-style: oblique;
-    font-size: 20pt;
+    font-size: 20px;
     font-weight: normal;
     font-family: "New Amsterdam", sans-serif;;
     margin: 5px 0;
@@ -111,10 +111,31 @@ a:hover {
         flex-direction: column;
         max-width: 100%;
     }
+
     body{
         background-image: url('resources/IMG_9301.png');
         background-repeat: repeat;
         padding : 20px;
+        display: grid;
+        font-size: 30px;
+    }
+    a:hover {
+        color: rgb(231, 158, 0);
+        background-color: white;
+        font-size: 35px;
+        font-weight: bold;
+    }
+    .d1{
+        font-size: 30px;
+    }
+    .d2{
+        font-size: 30px;
+    }
+    h1 {
+        color: #291200;
+        font-size: 30px;
+        font-weight: bold;
+        margin: 0px;
     }
 }
 @media (max-width: 900px) and (min-width: 401px){
@@ -132,10 +153,31 @@ a:hover {
         flex-direction: column;
         max-width: 100%;
     }
+
     body{
         background-image: url('resources/IMG_9301.png');
         background-repeat: repeat;
         padding : 20px;
+        display: grid;
+        font-size: 30px;
+    }
+    a:hover {
+        color: rgb(231, 158, 0);
+        background-color: white;
+        font-size: 35px;
+        font-weight: bold;
+    }
+    .d1{
+        font-size: 30px;
+    }
+    .d2{
+        font-size: 30px;
+    }
+    h1 {
+        color: #291200;
+        font-size: 30px;
+        font-weight: bold;
+        margin: 0px;
     }
 }
 
@@ -155,11 +197,32 @@ a:hover {
         margin-left: 0%;
     }
     .poster{
-        height: 1300px;
+        height: 1000px;
     }
+
     body{
         background-image: url('resources/IMG_9301.png');
         background-repeat: repeat;
         padding : 20px;
+        display: grid;
+        font-size: 40px;
+    }
+    a:hover {
+        color: rgb(231, 158, 0);
+        background-color: white;
+        font-size: 45px;
+        font-weight: bold;
+    }
+    .d1{
+        font-size: 30px;
+    }
+    .d2{
+        font-size: 30px;
+    }
+    h1 {
+        color: #291200;
+        font-size: 40px;
+        font-weight: bold;
+        margin: 0px;
     }
 }
